creo un html que referencia los proyectos de github page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
-        <h1>GitHub Pages</h1>
-    </head>
-    <main></main>
+    <header></header>
+    <main>
+        <section class="container-projects">
+            
+            <article class="item-project">
+                <p class="project-status in-process">En proceso</p>
+                <div class="box-project">
+                    <h2 class="title-project">Portafolio</h3>
+                    <p class="used-technologies">
+                        html y css
+                    </p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/Portafolio-JEZA/" target="_blank">Ir</a>
+                </div>
+            </article>
+
+            <article class="item-project">
+                <p class="project-status in-process">En proceso</p>
+                <div class="box-project">
+                    <h2 class="title-project">Paint Man</h3>
+                    <p class="used-technologies">
+                        html y css
+                    </p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/Paint-man-CSS/" target="_blank">Ir</a>
+                </div>
+            </article>
+
+            <article class="item-project">
+                <p class="project-status finish">Finalizado</p>
+                <div class="box-project">
+                    <h2 class="title-project">Google Clone</h3>
+                    <p class="used-technologies">
+                        html y css
+                    </p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/GoogleClone/" target="_blank">Ir</a>
+                </div>
+            </article>
+
+            <article class="item-project">
+                <p class="project-status finish">Finalizado</p>
+                <div class="box-project">
+                    <h2 class="title-project">Batatabit</h3>
+                    <p class="used-technologies">
+                        html y css
+                    </p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/Batatabit-Mobil-First/" target="_blank">Ir</a>
+                </div>
+            </article>
+            
+
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
