update url project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
                 <article class="item-project">
                     <p class="project-status finish">Finalizado</p>
-                    <a class="link-project" href="https://estebanzapata650.github.io/Batatabit-Mobil-Fst/" target="_blank">
+                    <a class="link-project" href="https://estebanzapata650.github.io/Batatabit-Mobil-First/" target="_blank">
                         <div class="box-project">
                             <h2 class="title-project">Batatabit</h2>
                             <p class="used-technologies">
