--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     
                 <article class="item-project">
                     <p class="project-status finish">Finalizado</p>
-                    <a class="link-project" href="https://estebanzapata650.github.io/GoogleClone/" target="_blank">
+                    <a class="link-project" href="https://estebanzapata650.github.io/async-landing/" target="_blank">
                         <div class="box-project">
-                            <h2 class="title-project">Google Clone</h2>
+                            <h2 class="title-project">Los Simpson - Landing</h2>
                             <p class="used-technologies">
-                                HTML CSS
+                                HTML JavaScript ApiRest Fetch
                             </p>
                         </div>
                     </a>
@@ -64,6 +64,18 @@
                     </a>
                 </article>
                 
+                <article class="item-project">
+                    <p class="project-status finish">Finalizado</p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/GoogleClone/" target="_blank">
+                        <div class="box-project">
+                            <h2 class="title-project">Google Clone</h2>
+                            <p class="used-technologies">
+                                HTML CSS
+                            </p>
+                        </div>
+                    </a>
+                </article>
+
                 <article class="item-project">
                     <p class="project-status finishBusiness">Empresarial</p>
                     <a class="link-project" href="https://ingreso.siboavance.com.co/SiboCRM" target="_blank">
