modifico texto error

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="box-project">
                             <h2 class="title-project">API SiboGestion</h2>
                             <p class="used-technologies">
-                                C# Apest Postman 
+                                C# ApiRest Postman 
                             </p>
                         </div>
                     </a>
