new project navbars No. 1

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
                 </article>
 
                 <article class="item-project">
+                    <p class="project-status finish">Finalizado</p>
+                    <a class="link-project" href="https://estebanzapata650.github.io/prototype-navbars-top1/" target="_blank">
+                        <div class="box-project">
+                            <h2 class="title-project">Prototype navbars No. 1</h2>
+                            <p class="used-technologies">
+                                HTML CSS
+                            </p>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="item-project">
                     <p class="project-status finishBusiness">Empresarial</p>
                     <a class="link-project" href="https://ingreso.siboavance.com.co/SiboCRM" target="_blank">
                         <div class="box-project">
